kube_configration/kube_dasboard/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-metal-ln
  namespace: kubernetes-dashboard
spec:
  ports:
  - port: 446
    targetPort: 8443
  selector:
    k8s-app: kubernetes-dashboard
  type: LoadBalancer
  loadBalancerIP: 192.168.0.110
